--- a/minesweep.html
+++ b/minesweep.html
@@ -27,9 +27,10 @@
 			<table cellpadding="0" cellspacing="0" class="minesweep" >
 				<tbody data-bind="foreach: tiles">
 					<tr data-bind="foreach: $data">
-						<td data-bind="click: click">
+						<td data-bind="click: click, event: {contextmenu: tag}">
 							<div class="border" data-bind="visible: isBorder"></div>
 							<img src="public/img/bombdeath.gif" data-bind="visible: showMine" width="16px" height="16px" alt="Da bomb" title="Da bomb" />
+							<img src="public/img/bombflagged.gif" data-bind="visible: isTagged" width="16px" height="16px" alt="Could Be Bomb" title="Could Be Bomb" />
 							<div class="value" data-bind="visible: showValue, text: value"></div>
 							<img src="public/img/blank.gif" data-bind="visible: isBlank" width="16px" height="16px" alt="I'm not telling" title="I'm not telling" />
 						</td>
@@ -39,7 +40,7 @@
 		</div>
 	</body>
 	<script type="text/javascript">
-		var board = window.minesweep.boardBuilder(10, 10, 10); 
+		var board = window.minesweep.boardBuilder(8, 8, 10); 
 		var koBoard = window.minesweep.convertBoardToKo(board);
 
 		ko.applyBindings(koBoard); //, document.getElementById('divMinesweepBoard')
