added define/require functionality so I can use these files in the browser and with node.

--- a/minesweep.html
+++ b/minesweep.html
@@ -35,9 +35,12 @@
 	</body>
 
 	<script type="text/javascript" src="lib/knockout-2.1.0.js" ></script>
+	<script type="text/javascript" src="lib/define.js" ></script>
+	<script type="text/javascript" src="lib/require.js" ></script>
 	<script type="text/javascript" src="lib/board.js" ></script>
 	<script type="text/javascript" src="lib/builder.js" ></script>
 	<script type="text/javascript" src="lib/boardBuilder.js" ></script>
+	<script type="text/javascript" src="lib/koTile.js" ></script> 
 	<script type="text/javascript" src="lib/convertBoardToKo.js" ></script>
 
 	<script type="text/javascript">
