updated the convert code to remove a possible circular dependency.

--- a/minesweep.html
+++ b/minesweep.html
@@ -47,6 +47,6 @@
 		var board = window.minesweep.boardBuilder(8, 8, 10); 
 		var koBoard = window.minesweep.convertBoardToKo(board);
 
-		ko.applyBindings(koBoard); //, document.getElementById('divMinesweepBoard')
+		ko.applyBindings(koBoard);  
 	</script>
 </html>
