Added terrible message if user loses game.

--- a/minesweep.html
+++ b/minesweep.html
@@ -32,6 +32,10 @@
 				</tbody>
 			</table>
 		</div>
+		<div id="divFailureNote" data-bind="visible: failure">
+			You did not do so well this time. Maybe next time. 
+			<img src="public/img/facedead.gif" alt="You Died" /> 
+		</div>
 	</body>
 
 	<script type="text/javascript" src="lib/knockout-2.1.0.js" ></script>
