--- a/minesweep.html
+++ b/minesweep.html
@@ -5,50 +5,70 @@
 		</title>
 		<link rel="stylesheet" href="public/css/bootstrap.min.css" type="text/css">
 		<link rel="stylesheet" href="public/css/minesweep.css" type="text/css">
+		<style type="text/css">body{padding-top:60px;padding-bottom:40px;}.sidebar-nav{padding:9px 0;}</style>
 	</head>
 	<body>
+		<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container-fluid">
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a><a class="brand" href="#">Mine Sweeper</a>
+					<div class="nav-collapse collapse"> 
+<!-- 						<ul class="nav">
+							<li class="active">
+								<a href="#">Home</a>
+							</li>
+							<li>
+								<a href="#about">About</a>
+							</li>
+							<li>
+								<a href="#contact">Contact</a>
+							</li>
+						</ul> -->
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="container">
 			<div class="row">
-				<div class="span4"> 
+				<div class="span4">
 					<form class="form-horizontal">
-					  <legend>Legend</legend>
-					  <div class="control-group">
-					    <label class="control-label" for="txtColumns">Number of Columns</label>
-					    <div class="controls">
-					      <input id="txtColumns" name="txtColumns" type="number" class="input-mini" data-bind="value: columns">
-					    </div>
-					  </div>
-					  <div class="control-group">
-					    <label class="control-label" for="txtRows">Number of Rows</label>
-					    <div class="controls">
-					      <input id="txtRows" name="txtRows" type="number" class="input-mini" data-bind="value: rows">
-					    </div>
-					  </div>
-					  <div class="control-group"> 
-						<label class="control-label" for="txtBombs">Number of Bombs</label> 
-						<div class="controls">
-							<input id="txtBombs" name="txtBombs" type="number" class="input-mini" data-bind="value: numMines"> 
-						</div> 
-					  </div>
-					  <div class="control-group"> 
-						<div class="controls">
-					  	  <button class="btn btn-primary btn-large" data-bind="click: updateBoard">Reset Board</button>  
-					    </div>
-					  </div>
-					</form> 
-					<div id="divFailureNote" data-bind="visible: failure">
-						You did not do so well this time. Maybe next time. <img src="public/img/facedead.gif" alt="You Died">
-					</div> 
+						<div class="control-group">
+							<label class="control-label" for="txtColumns">Number of Columns</label>
+							<div class="controls">
+								<input id="txtColumns" name="txtColumns" type="number" class="input-small" data-bind="value: columns">
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="txtRows">Number of Rows</label>
+							<div class="controls">
+								<input id="txtRows" name="txtRows" type="number" class="input-small" data-bind="value: rows">
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="txtBombs">Number of Bombs</label>
+							<div class="controls">
+								<input id="txtBombs" name="txtBombs" type="number" class="input-small" data-bind="value: numMines">
+							</div>
+						</div>
+						<div class="control-group">
+							<div class="controls">
+								<button class="btn btn-primary" data-bind="click: updateBoard">New Game</button>
+							</div>
+						</div>
+					</form>
 				</div>
-				<div class="span8"> 
-					<legend>Mine Sweeper</legend>
+				<div class="span8">
 					<div id="divMinesweepBoard">
 						<table cellpadding="0" cellspacing="0" class="minesweep">
 							<tbody data-bind="foreach: tiles">
 								<tr data-bind="foreach: $data">
 									<td data-bind="click: click, event: {contextmenu: tag}">
-										<div class="border" data-bind="visible: isBorder"></div><img src="public/img/bombdeath.gif" data-bind="visible: showMine" width="16px" height="16px" alt="a bomb"> <img src="public/img/bombflagged.gif" data-bind="visible: isTagged" width="16px" height="16px" alt="Could Be Bomb">
-										<div class="value" data-bind="visible: showValue, text: value, style: { color: getValueColor }"></div><img src="public/img/blank.gif" data-bind="visible: isBlank" width="16px" height="16px" alt="blank tile">
+										<div class="border" data-bind="visible: isBorder"></div>
+										<img src="public/img/bombdeath.gif" data-bind="visible: showMine" width="16px" height="16px" alt="a bomb"> 
+										<img src="public/img/bombflagged.gif" data-bind="visible: isTagged" width="16px" height="16px" alt="Could Be Bomb">
+										<div class="value" data-bind="visible: showValue, text: value, style: { color: getValueColor }"></div>
+										<img src="public/img/blank.gif" data-bind="visible: isBlank() && !isHighlighted(), event: {mouseover: highlight, mouseout: blankify}" width="16px" height="16px" alt="blank tile" >
+										<img src="public/img/GreenTile.gif" data-bind="visible: isBlank() && isHighlighted(), event: {mouseover: highlight, mouseout: blankify}" width="16px" height="16px" alt="highlighted tile" >
 									</td>
 								</tr>
 							</tbody>
@@ -56,22 +76,31 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="span4">
+					<div class="control-group">
+						<div class="controls">
+							<button class="btn btn-warning" data-bind="click: validateGame">Validate</button>
+						</div>
+					</div>
+				</div>
+			</div>
 			<hr>
 			<footer>
-
+				<div class="alert alert-error" data-bind="visible: failure">
+					You did not do so well this time. Maybe next time. <button class="btn btn-danger" data-bind="click: updateBoard">New Game</button>
+				</div>
 			</footer>
-		</div>
-		<script type="text/javascript" src="public/js/knockout-2.1.0.js"></script>
-		<script type="text/javascript" src="public/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="lib/define.js"></script>
-		<script type="text/javascript" src="lib/require.js"></script>
-		<script type="text/javascript" src="lib/board.js"></script>
-		<script type="text/javascript" src="lib/builder.js"></script>
-		<script type="text/javascript" src="lib/boardBuilder.js"></script>
-		<script type="text/javascript" src="lib/koTile.js"></script>
-		<script type="text/javascript" src="lib/koBoard.js"></script>
-		<script type="text/javascript">
-			var board = window.minesweep.boardBuilder(8, 8, 10); 
+		</div><script type="text/javascript" src="public/js/knockout-2.1.0.js">
+</script><script type="text/javascript" src="lib/define.js">
+</script><script type="text/javascript" src="lib/require.js">
+</script><script type="text/javascript" src="lib/board.js">
+</script><script type="text/javascript" src="lib/builder.js">
+</script><script type="text/javascript" src="lib/boardBuilder.js">
+</script><script type="text/javascript" src="lib/koTile.js">
+</script><script type="text/javascript" src="lib/koBoard.js">
+</script><script type="text/javascript">
+	var board = window.minesweep.boardBuilder(8, 8, 10); 
 			var koBoard = new window.minesweep.koBoard(board);
 
 			ko.applyBindings(koBoard);  
