--- a/minesweep.html
+++ b/minesweep.html
@@ -4,8 +4,7 @@
 			Minesweeper
 		</title>
 		<link rel="stylesheet" href="public/css/bootstrap.min.css" type="text/css">
-		<link rel="stylesheet" href="public/css/minesweep.css" type="text/css">
-		<style type="text/css">body{padding-top:60px;padding-bottom:40px;}.sidebar-nav{padding:9px 0;}</style>
+		<link rel="stylesheet" href="public/css/minesweep.css" type="text/css"> 
 	</head>
 	<body>
 		<div class="navbar navbar-inverse navbar-fixed-top">
@@ -31,7 +30,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span4">
-					<form class="form-horizontal">
+					<div id="divControls" class="form-horizontal controls">
 						<div class="control-group">
 							<label class="control-label" for="txtColumns">Number of Columns</label>
 							<div class="controls">
@@ -50,15 +49,13 @@
 								<input id="txtBombs" name="txtBombs" type="number" class="input-small" data-bind="value: numMines">
 							</div>
 						</div>
-						<div class="control-group">
-							<div class="controls">
-								<button class="btn btn-primary" data-bind="click: updateBoard">New Game</button>
-							</div>
+						<div class="control-group center"> 
+							<button class="btn btn-primary" data-bind="click: updateBoard">New Game</button> 
 						</div>
-					</form>
+					</div>
 				</div>
 				<div class="span8">
-					<div id="divMinesweepBoard">
+					<div id="divMinesweepBoard board">
 						<table cellpadding="0" cellspacing="0" class="minesweep">
 							<tbody data-bind="foreach: tiles">
 								<tr data-bind="foreach: $data">
