--- a/minesweep.html
+++ b/minesweep.html
@@ -10,7 +10,8 @@
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container-fluid">
-					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a><a class="brand" href="#">Mine Sweeper</a> 
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a>
+					<a class="brand" href="#">Mine Sweeper</a> 
 				</div>
 			</div>
 		</div>
@@ -95,13 +96,19 @@
 		<script type="text/javascript" src="lib/board.js"></script>
 		<script type="text/javascript" src="lib/builder.js"></script>
 		<script type="text/javascript" src="lib/boardBuilder.js"></script>
-		<script type="text/javascript" src="lib/koTile.js"></script>
-		<script type="text/javascript" src="lib/koBoard.js"></script>
+		<script type="text/javascript" src="lib/tileViewModel.js"></script>
+		<script type="text/javascript" src="lib/boardViewModel.js"></script>
+		<script type="text/javascript" src="lib/gameViewModel.js"></script> 
 		<script type="text/javascript">
 			var board = window.minesweep.boardBuilder(8, 8, 10);
-			var koBoard = new window.minesweep.koBoard(board);
+			var boardViewModel = new window.minesweep.boardViewModel();
 
-			ko.applyBindings(koBoard);  
+			boardViewModel.import(board);
+			var game = new window.minesweep.gameViewModel(board, boardViewModel);
+
+			ko.applyBindings(boardViewModel, document.getElementById('divMinesweepBoard'));  
+			ko.applyBindings(game, document.getElementById('divControls'));  
+			ko.applyBindings(game, document.getElementById('ftMessages'));  
 		</script>
 	</body>
 </html>
