fixed a cheat bug due to refactoring, and cleaned up the styles a bit.

--- a/minesweep.html
+++ b/minesweep.html
@@ -17,8 +17,8 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="span4" id="divControls">
-					<div id="divControls" class="form-horizontal controls">
+				<div class="span4">
+					<div  id="divControls" class="form-horizontal controls">
 						<div class="control-group">
 							<label class="control-label" >Mines Tagged</label>
 							<div class="controls">
@@ -79,7 +79,7 @@
 					</div>
 				</div>
 			</div> 
-			<hr>
+			<!-- <hr> -->
 			<footer id="ftMessages">
 				<div class="alert alert-error" data-bind="visible: failure">
 					You did not do so well this time. Maybe next time. 
