fixing up the css a bit, cleaning up the js.

--- a/minesweep.html
+++ b/minesweep.html
@@ -102,6 +102,7 @@
 		<script type="text/javascript" src="lib/boardViewModel.js"></script>
 		<script type="text/javascript" src="lib/gameViewModel.js"></script> 
 		<script type="text/javascript">
+			//This could be in its own file but I'm leaving it here so the code reviewers have an easy start -->
 			var board = window.minesweep.boardBuilder(8, 8, 10);
 			var boardViewModel = new window.minesweep.boardViewModel();
 
