--- a/minesweep.html
+++ b/minesweep.html
@@ -66,12 +66,12 @@
 						<table cellpadding="0" cellspacing="0" class="minesweep">
 							<tbody data-bind="foreach: tiles">
 								<tr data-bind="foreach: $data">
-									<td>
+									<td data-bind="event: {contextmenu: tag}">
 										<div class="border" data-bind="visible: isBorder"></div>
 										<div class="mine" data-bind="visible: showMine" ></div>
 										<div class="value" data-bind="visible: showValue, text: value, style: { color: getValueColor }"></div>
-										<div class="flagged" data-bind="visible: isTagged, click: click, event: {contextmenu: tag}" ></div>
-										<div class="blank"  data-bind="visible: isBlank, click: click, event: {contextmenu: tag}" ></div>
+										<div class="flagged" data-bind="visible: isTagged, click: click" ></div>
+										<div class="blank"  data-bind="visible: isBlank, click: click" ></div>
 									</td>
 								</tr>
 							</tbody> 
